unpackaged/main/default/objects/Product2/fields/Club__c.field-meta.xml
<CustomField>
    <fullName>Club__c</fullName>
    <externalId>true</externalId>
    <label>Club</label>
    <length>5</length>
    <type>Text</type>
</CustomField>