unpackaged/main/default/objects/Product2/fields/Ledger_Account__c.field-meta.xml
<CustomField>
    <fullName>Ledger_Account__c</fullName>
    <label>Ledger Account</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B</fullName>
                <label>B-Classic</label>
            </value>
            <value>
                <fullName>E</fullName>
                <label>E - Premier</label>
            </value>
            <value>
                <fullName>J</fullName>
                <label>J - Basic</label>
            </value>
            <value>
                <fullName>O</fullName>
                <label>O - Other</label>
            </value>
            <value>
                <fullName>P</fullName>
                <label>P - Plus</label>
            </value>
            <value>
                <fullName>R</fullName>
                <label>R -RV</label>
            </value>
            <value>
                <fullName>V</fullName>
                <label>V - Premier RV</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>