unpackaged/main/default/objects/Product2/fields/Mileage_Category__c.field-meta.xml
<CustomField>
    <fullName>Mileage_Category__c</fullName>
    <label>Mileage Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ENROUTE</fullName>
            </value>
            <value>
                <fullName>LONG TOW</fullName>
            </value>
            <value>
                <fullName>TOW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>