unpackaged/main/default/objects/Product2/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ATC</fullName>
                <label>ATC - At cost charges</label>
            </value>
            <value>
                <fullName>EXT</fullName>
                <label>EXT - Extrication</label>
            </value>
            <value>
                <fullName>LK</fullName>
                <label>LK - Locksmith</label>
            </value>
            <value>
                <fullName>LTS</fullName>
                <label>LTS - Light Service</label>
            </value>
            <value>
                <fullName>TOW</fullName>
                <label>TOW - Tow</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>