unpackaged/main/default/objects/Product2/fields/Tcode__c.field-meta.xml
<CustomField>
    <fullName>Tcode__c</fullName>
    <label>Trouble Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>7A</fullName>
            </value>
            <value>
                <fullName>7B</fullName>
            </value>
            <value>
                <fullName>9A</fullName>
            </value>
            <value>
                <fullName>T0</fullName>
            </value>
            <value>
                <fullName>T1</fullName>
            </value>
            <value>
                <fullName>T3</fullName>
            </value>
            <value>
                <fullName>T5</fullName>
            </value>
            <value>
                <fullName>T6</fullName>
            </value>
            <value>
                <fullName>T7</fullName>
            </value>
            <value>
                <fullName>T8</fullName>
            </value>
            <value>
                <fullName>T9</fullName>
            </value>
            <value>
                <fullName>1D</fullName>
            </value>
            <value>
                <fullName>1R</fullName>
            </value>
            <value>
                <fullName>6A</fullName>
            </value>
            <value>
                <fullName>6B</fullName>
            </value>
            <value>
                <fullName>6C</fullName>
            </value>
            <value>
                <fullName>8D</fullName>
            </value>
            <value>
                <fullName>8R</fullName>
            </value>
            <value>
                <fullName>AC</fullName>
            </value>
            <value>
                <fullName>B1</fullName>
            </value>
            <value>
                <fullName>DD</fullName>
            </value>
            <value>
                <fullName>DL</fullName>
            </value>
            <value>
                <fullName>E2</fullName>
            </value>
            <value>
                <fullName>S1</fullName>
            </value>
            <value>
                <fullName>TL</fullName>
            </value>
            <value>
                <fullName>W1</fullName>
            </value>
            <value>
                <fullName>W3</fullName>
            </value>
            <value>
                <fullName>0</fullName>
                <isActive>false</isActive>
                <label>0</label>
            </value>
            <value>
                <fullName>1</fullName>
                <isActive>false</isActive>
                <label>1</label>
            </value>
            <value>
                <fullName>1B</fullName>
                <isActive>false</isActive>
                <label>1B</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>