unpackaged/main/default/objects/Product2/fields/Units__c.field-meta.xml
<CustomField>
    <fullName>Units__c</fullName>
    <label>Units</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EA</fullName>
                <label>EA (Each)</label>
            </value>
            <value>
                <fullName>ML</fullName>
                <label>ML (Miles)</label>
            </value>
            <value>
                <fullName>DL</fullName>
                <label>DL (Dollar)</label>
            </value>
            <value>
                <fullName>GL</fullName>
                <label>GL (Gallon)</label>
            </value>
            <value>
                <fullName>MN</fullName>
                <label>MN (Minutes)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>