unpackaged/main/default/objects/Product2/fields/Uses_Time_of_Day__c.field-meta.xml
<CustomField>
    <fullName>Uses_Time_of_Day__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Uses Time of Day?</label>
    <type>Checkbox</type>
</CustomField>