unpackaged/main/default/objects/Product2/recordTypes/Vehicle_Skill.recordType-meta.xml
<RecordType>
    <fullName>Vehicle_Skill</fullName>
    <active>true</active>
    <label>Vehicle Skill</label>
</RecordType>