unpackaged/main/default/objects/Product2/listViews/AllProducts.listView-meta.xml
<ListView>
    <fullName>AllProducts</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>PRODUCT2.QTY_UNIT_OF_MEASURE</columns>
    <columns>PRODUCT2.CREATED_DATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>Club__c</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Uses_Time_of_Day__c</columns>
    <columns>Tcode__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Products</label>
</ListView>